chore(build): fija el JDK del build a 21 con maven-toolchains-plugin
Causa raíz del fallo de Byte Buddy/Mockito: el mvn de Homebrew arrastra su
propio openjdk 24 y fuerza JAVA_HOME a él, aunque el proyecto compile a Java 21
y CI corra en Temurin 21. El build local en 24 rompía los tests con @MockBean.

Solución de fondo (no parche): maven-toolchains-plugin exige el toolchain
'jdk 21' -> compiler y surefire usan Corretto 21 con independencia del JDK que
lance Maven, igual que CI. Se elimina el flag -Dnet.bytebuddy.experimental.

- pom.xml: maven-toolchains-plugin (goal toolchain) + prop de versión; quitado
  el flag experimental de Surefire.
- toolchains.sample.xml: plantilla para ~/.m2/toolchains.xml (no versionado).
- README: prerrequisito JDK 21 + cómo configurar el toolchain.
- memoria_tecnica: nota de entorno y fila E2 actualizadas.

Verificado: mvn -pl asset-inventory-service verify usa Corretto 21 en
compiler/surefire -> 40 tests, cobertura >=70%, 0 Checkstyle, sin el flag.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>